# icp-cli-network-launcher

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SPEC.md  cloudengine.Dockerfile  flake.nix  package.sh
.github/repo_policies/: BOT_APPROVED_FILES
.github/workflows/: ci.yml  promote-release.yml  release.yml  update-pocket-ic.yml  update-rust-toolchain.yml
scripts/: update-pocket-ic.sh
src/: main.rs
tests/: canister_metrics_authority.rs
