[package]
name = "icp-cli-network-launcher"
version = "13.0.0-2026-05-07-04-27"
edition = "2024"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
license = "Apache-2.0"

[features]
cloud-engine = []

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
camino = "1.2.2"
clap = { version = "4.5.53", features = ["derive", "env"] }
hex = "0.4.3"
ic_principal = "0.1.1"
notify = "8.2.0"
pocket-ic = { git = "https://github.com/dfinity/ic", rev = "62e841d27ea12451f504e74c54843b7cbf93ca4d" }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["fs"] }
