[package]
name = "icp-cli-network-launcher"
version = "14.0.0-2026-06-12-04-52"
edition = "2024"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
license = "Apache-2.0"

[features]
cloud-engine = []

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
camino = "1.2.2"
clap = { version = "4.5.53", features = ["derive", "env"] }
hex = "0.4.3"
ic_principal = "0.1.1"
notify = "8.2.0"
pocket-ic = { git = "https://github.com/dfinity/ic", rev = "557d7278dcbb0305411c6536645c3a32b4ec64b6" }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["fs"] }
